--- a/week4_lecture/Lecture03.ipynb
+++ b/week4_lecture/Lecture03.ipynb
@@ -245,6 +245,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see a template of LATEX table here\n",
+    "https://www.overleaf.com/read/ftckcjwrgdzk"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
