update google colab instruction

--- a/week6_WS/WS07.ipynb
+++ b/week6_WS/WS07.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a7102f",
+   "id": "ef8e0684",
    "metadata": {},
    "source": [
     "This cell contains instructions for running this notebook on Google Colab. Skip this and next cell if you run the notebook on datahub.berkeley.edu\n",
@@ -43,13 +43,15 @@
     "\n",
     "- if you don't see the pop-up window, then on the upper left corner, click `File` and in the dropdown menu select `Open notebook`, then you will see the pop-up window with GitHub as an option.\n",
     "\n",
-    "- on Google Colab, you will also need to execute the cell below to collect all the csv files needed for this notebook."
+    "- on Google Colab, you will also need to execute the cell below to collect all the csv files needed for this notebook.\n",
+    "\n",
+    "- **Once you have opened the notebook, you must go back to the File tab on the upper left corner of the browser and select `Save a copy in Drive`.** This would create your personal copy of the notebook in your Google Drive. Otherwise, you would be working on the notebook in GitHub, to which you do not have the permission to save your execution results."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d19c7aca",
+   "id": "c98c6a2a",
    "metadata": {},
    "outputs": [],
    "source": [
